--- a/src/components/home/home-item/index.sass
+++ b/src/components/home/home-item/index.sass
@@ -38,7 +38,7 @@
 		padding-top: 3px
 		.home-tab
 			display: flex
-			margin-top: 27px
+			margin-top: 29px
 			flex-wrap: wrap
 			justify-content: center
 			button
@@ -51,7 +51,7 @@
 					padding: 7px 30px
 					font-size: 13px
 					color: #6f6f6f
-				&:focus
+				&.active, &:hover
 					outline: 0
 					background-color: #f1c00e
 					p
@@ -106,6 +106,7 @@
 .home-item
 	.home-item-bot
 		margin-bottom: 60px
+		margin-top: 40px
 		text-align: center
 		a
 			padding:13px 26px 
