--- a/src/components/header/index.sass
+++ b/src/components/header/index.sass
@@ -326,3 +326,95 @@ header
 							a
 								font-weight: 700
 								color: #373737
+//form-dangnhap
+.fancybox-content
+	padding:0
+	.btnDN
+		display: none
+	.formDN-title
+		cursor: pointer
+		display: flex
+		font-size: 15px
+		color:#717171
+		text-transform: uppercase
+		a
+			padding:15px 55px
+			&:hover
+				color:#f7ae00
+				border-bottom: 2px solid #f7ae00
+	.formDN-content
+		padding:10px 20px
+		.DN-cont
+			p
+				font-size: 13px
+				color:#676767
+			input
+				width:100%
+				padding:9px
+				border-radius: 3px
+				border: 1px solid #676767
+				margin-bottom: 15px
+			.quen-mk
+				display: flex
+				a
+					font-size: 13px
+					color:#f7ae00
+					padding-left: 3px
+			.btn-DN
+				text-align: center
+				background-color: #f8ad01
+				margin-bottom: 5px
+				padding: 5px 0
+				border-radius: 3px
+				a
+					color:#fff
+			.btn-DNFB
+				text-align: center
+				background-color: #3c5a96
+				margin-bottom: 5px
+				padding: 5px 0
+				border-radius: 3px
+				a
+					color:#fff
+			.btn-DNGG
+				text-align: center
+				background-color: #dd4837
+				margin-bottom: 5px
+				padding: 5px 0
+				border-radius: 3px
+				a
+					color:#fff
+			.btn-DNZL
+				text-align: center
+				background-color: #1d8fdb
+				margin-bottom: 10px
+				padding: 5px 0
+				border-radius: 3px
+				a
+					color:#fff
+		.TTK-cont
+			padding:10px 20px
+			p
+				font-size: 13px
+				color:#676767
+			input
+				width:100%
+				padding:9px
+				border-radius: 3px
+				border: 1px solid #676767
+				margin-bottom: 15px
+			.checkbox-KM
+				display: flex
+				input
+					flex:0 0 10%
+					align-items: center
+				p
+					flex:0 0 90%
+			.btn-TTK
+				text-align: center
+				background-color: #f8ad01
+				margin-bottom: 5px
+				padding: 5px 0
+				border-radius: 3px
+				a
+					color:#fff
