--- a/src/components/home/home-item/index.sass
+++ b/src/components/home/home-item/index.sass
@@ -47,6 +47,7 @@
 				margin-right:5px
 				cursor: pointer
 				border-radius: 3px
+				margin-bottom: 5px
 				p
 					padding: 7px 30px
 					font-size: 13px
