--- a/src/components/header/index.sass
+++ b/src/components/header/index.sass
@@ -339,9 +339,11 @@ header
 		text-transform: uppercase
 		a
 			padding:15px 55px
-			&:hover
+			&:hover, &.active
 				color:#f7ae00
 				border-bottom: 2px solid #f7ae00
+			@media (max-width: 435px)
+				padding: 15px 26px
 	.formDN-content
 		padding:10px 20px
 		.DN-cont
@@ -392,29 +394,47 @@ header
 				border-radius: 3px
 				a
 					color:#fff
-		.TTK-cont
-			padding:10px 20px
-			p
-				font-size: 13px
-				color:#676767
-			input
-				width:100%
-				padding:9px
-				border-radius: 3px
-				border: 1px solid #676767
-				margin-bottom: 15px
-			.checkbox-KM
-				display: flex
-				input
-					flex:0 0 10%
-					align-items: center
+		.DN:last-child
+			display: none
+			.TTK-cont
 				p
-					flex:0 0 90%
-			.btn-TTK
+					font-size: 13px
+					color:#676767
+				input
+					width:100%
+					padding:9px
+					border-radius: 3px
+					border: 1px solid #676767
+					margin-bottom: 15px
+				.checkbox-KM
+					display: flex
+					input
+						flex:0 0 10%
+						align-items: center
+					p
+						flex:0 0 90%
+				.btn-TTK
+					text-align: center
+					background-color: #f8ad01
+					margin-bottom: 5px
+					padding: 5px 0
+					border-radius: 3px
+					a
+						color:#fff
+			.formDNTC
+				display: none
 				text-align: center
-				background-color: #f8ad01
-				margin-bottom: 5px
-				padding: 5px 0
-				border-radius: 3px
-				a
-					color:#fff
+				padding:33px
+				h4
+					margin: 20px 0
+				p
+					width: 75%
+					margin: 0 auto
+					@media (max-width: 768px)
+						width:100%
+				@media (max-width: 768px)
+					padding:0
+.show
+	display: block !important
+.none
+	display: none !important
