--- a/src/components/home/service/index.sass
+++ b/src/components/home/service/index.sass
@@ -16,6 +16,8 @@
 					border: none
 				div
 					padding-left: 15px
+					@media (max-width: 768px)
+						padding:0
 @media (max-width: 1200px)
 	.container
 		max-width: 100%
