--- a/src/components/icons.sass
+++ b/src/components/icons.sass
@@ -152,3 +152,12 @@
 .fa-times-circle
 	&:before
 		content: '\f057'
+.fa-clipboard-list
+	&:before
+		content: '\f46d'
+		padding-left: 20px
+.fas.fa-fist-raised
+	&:before
+		content: '\f6de'
+		padding-right: 10px
+		padding-left: 20px
