--- a/src/components/admin/index.pug
+++ b/src/components/admin/index.pug
@@ -2,7 +2,7 @@ section.admin
 	.admin-content
 		.admin-left
 			.admin-left-title
-				h4 Admin
+				h4 việt thanh
 			.admin-left-category
 				ul
 					li.fas.fa-clipboard-list
@@ -33,10 +33,48 @@ section.admin
 				a(href="#") User
 				a(href="#") Logout
 			.admin-right-content
-				tr
-					td
-						p 123
-					td
-						p 123
-					td
-						p 123
+				table#customers
+					tr
+						th Company
+						th Contact
+						th Country
+					tr
+						td Alfreds Futterkiste
+						td Maria Anders
+						td Germany
+					tr
+						td Berglunds snabbköp
+						td Christina Berglund
+						td Sweden
+					tr
+						td Centro comercial Moctezuma
+						td Francisco Chang
+						td Mexico
+					tr
+						td Ernst Handel
+						td Roland Mendel
+						td Austria
+					tr
+						td Island Trading
+						td Helen Bennett
+						td UK
+					tr
+						td Königlich Essen
+						td Philip Cramer
+						td Germany
+					tr
+						td Laughing Bacchus Winecellars
+						td Yoshi Tannamuri
+						td Canada
+					tr
+						td Magazzini Alimentari Riuniti
+						td Giovanni Rovelli
+						td Italy
+					tr
+						td North/South
+						td Simon Crowther
+						td UK
+					tr
+						td Paris spécialités
+						td Marie Bertrand
+						td France
