--- a/src/components/admin/index.sass
+++ b/src/components/admin/index.sass
@@ -11,8 +11,14 @@ section.admin
 					font-size: 40px
 					text-align: center
 					margin: 0
-					padding: 10px 0
+					padding: 12px 0
 					background-color: #ff8907
+					color: #000
+					font-family: Source Sans Pro,sans-serif
+					font-weight: 900
+					line-height: 1
+					text-transform: uppercase
+					white-space: nowrap
 			.admin-left-category
 				ul
 					li
@@ -29,10 +35,39 @@ section.admin
 								color:#3B3B3B
 								display: block
 								font-size: 16px
+								&:hover
+									color:#fff
 		.admin-right
 			flex:0 0 80%
 			.admin-right-top
-				background-color: #ff8907
-				padding: 21px 0
+				box-shadow: 0 0 10px 0 rgba(0, 0, 0, .3)
+				margin: 6px 6px 0 6px
+				padding: 18px 0
 				font-size: 16px
+				display: flex
+				justify-content: flex-end
+				a
+					color:#000
+					padding-right: 10px
+					&:hover
+						color:#f00
 			.admin-right-content
+				padding: 20px
+				#customers
+					font-family: "Trebuchet MS", Arial, Helvetica, sans-serif
+					border-collapse: collapse
+					width: 100%
+					td, th
+						border: 1px solid #ddd
+						padding: 8px
+					tr
+						&:nth-child(even)
+							background-color: #f2f2f2
+						&:hover
+							background-color: #ddd
+					th
+						padding-top: 12px
+						padding-bottom: 12px
+						text-align: left
+						background-color: #4CAF50
+						color: white
