--- a/src/components/menu/index.sass
+++ b/src/components/menu/index.sass
@@ -27,7 +27,8 @@
 		font-size: 20px
 		margin-left: 5px
 		color: #7b858a
-	.navbar-menu
+	.navbar-menu,
+	.navbar-menu-no-image
 		display: none
 		width: 100%
 		position: absolute
