--- a/src/components/home/slider/index.sass
+++ b/src/components/home/slider/index.sass
@@ -31,7 +31,7 @@
 			top: auto
 	.swiper-pagination-progressbar 
 		.swiper-pagination-progressbar-fill
-			background: #ffcd18
+			background: #ffcd18 !important
 	.bottom-swiper
 		.swiper-wrapper
 			.swiper-slide
