--- a/src/components/menu/index.pug
+++ b/src/components/menu/index.pug
@@ -12,19 +12,19 @@ section.menu-container
 								a(href="product-category.html") Danh mục sản phẩm
 								span.mdi.mdi-chevron-down.btn-dropdown
 							.nav-content
-								-for(i = 0; i < 5; i++)
-									ul.menu
-										.menu-title
-											span.mdi.mdi-chevron-right.btn-dropdown
-											a(href="#") menu level 1
-										li
-											a(href="#") menu level 2
-										li
-											a(href="#") menu level 2
-										li
-											a(href="#") menu level 2
-										li
-											a(href="#") menu level 2
+								//- -for(i = 0; i < 5; i++)
+								//- 	ul.menu
+								//- 		.menu-title
+								//- 			span.mdi.mdi-chevron-right.btn-dropdown
+								//- 			a(href="#") menu level 1
+								//- 		li
+								//- 			a(href="#") menu level 2
+								//- 		li
+								//- 			a(href="#") menu level 2
+								//- 		li
+								//- 			a(href="#") menu level 2
+								//- 		li
+								//- 			a(href="#") menu level 2
 						li
 							.nav-title
 								a(href="#") PIANO
@@ -76,3 +76,60 @@ section.menu-container
 									a(href="#") menu level 2
 				.col-lg-6
 					img(src="./img/product/h00.jpg", alt="1")
+	.navbar-menu-no-image
+		.container
+			.row
+				.col-lg-2
+					ul.menu
+						.menu-title
+							a(href="#") menu level 1
+							span.mdi.mdi-chevron-right.btn-dropdown
+						li
+							a(href="#") menu level 2
+						li
+							a(href="#") menu level 2
+						li
+							a(href="#") menu level 2
+						li
+							a(href="#") menu level 2
+				-for(i = 0; i < 2; i++)
+					.col-lg-2
+						-for(j = 0; j < 2; j++)
+							ul.menu
+								.menu-title
+									a(href="#") menu level 1
+									span.mdi.mdi-chevron-right.btn-dropdown
+								li
+									a(href="#") menu level 2
+								li
+									a(href="#") menu level 2
+								li
+									a(href="#") menu level 2
+								li
+									a(href="#") menu level 2
+				.col-lg-2
+					ul.menu
+						.menu-title
+							a(href="#") menu level 1
+							span.mdi.mdi-chevron-right.btn-dropdown
+						li
+							a(href="#") menu level 2
+						li
+							a(href="#") menu level 2
+						li
+							a(href="#") menu level 2
+						li
+							a(href="#") menu level 2
+				.col-lg-2
+					ul.menu
+						.menu-title
+							a(href="#") menu level 1
+							span.mdi.mdi-chevron-right.btn-dropdown
+						li
+							a(href="#") menu level 2
+						li
+							a(href="#") menu level 2
+						li
+							a(href="#") menu level 2
+						li
+							a(href="#") menu level 2
